# foundation

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  KNOWLEDGE.md  STATUS.md  pyproject.toml
config/environments/: dev.toml
config/experiments/: _template.toml
config/instruments/: btcusdt_5m.toml
experiments/: registry.toml
src/foundation/: __init__.py  cli.py
src/foundation/config/: __init__.py  loader.py  logging.py  schema.py
src/foundation/data/: __init__.py  contracts.py  embargo.py  guard.py  guarded_dataset.py  holdout.py  loaders.py  splits.py
src/foundation/data/downloaders/: __init__.py  base.py  candles.py  funding.py  liquidations.py  oi.py
src/foundation/data/processing/: __init__.py  align.py  loader.py  models.py  pipeline.py  validate.py
src/foundation/diagnostics/: __init__.py  models.py  planted_signal.py  signal_recovery.py
src/foundation/validation/: __init__.py
tests/: conftest.py
tests/test_config/: test_loader.py  test_schema.py
tests/test_data/: test_contracts.py  test_downloaders.py  test_embargo.py  test_guard.py  test_guarded_dataset.py  test_holdout.py  test_processing.py
tests/test_diagnostics/: test_planted_signal.py
