[project]
name = "foundation"
version = "0.1.0"
description = "Production-grade ML trading system for BTC perpetual futures"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
    "pyarrow>=15,<17",
    "lightgbm>=4.3,<5",
    "scipy>=1.12,<2",
    "pydantic>=2.6,<3",
    "tomli>=2.0,<3",
    "structlog>=24.1,<25",
    "python-dotenv>=1.0,<2",
    "arch>=7.0,<8",
    "hmmlearn>=0.3,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "duckdb>=0.10,<1",
    "optuna>=4.0,<5",
]

[project.scripts]
foundation = "foundation.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
