[project]
name = "foundation"
version = "0.1.0"
description = "Production-grade ML trading system for BTC perpetual futures"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "lightgbm>=4.3",
    "scipy>=1.12",
    "pydantic>=2.6",
    "tomli>=2.0;python_version<'3.11'",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = [
    "arch>=7.0",
    "hmmlearn>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
analysis = [
    "duckdb>=0.10",
    "optuna>=4.0",
]

[project.scripts]
foundation = "foundation.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
